--- a/pokedexdevpess/pubspec.yaml
+++ b/pokedexdevpess/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.3.0
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
@@ -21,4 +22,5 @@ flutter:
   assets:
     - assets/pokeball.png
     - assets/regions/
+    - assets/Song.mp3
     
